se agrega promt de análisis

--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
                         <div class="d-grid gap-2 d-md-flex justify-content-md-center">
                             <button class="btn btn-primary me-md-2" formaction="/download_video" type="submit">Descargar Video</button>
                             <button class="btn btn-success me-md-2" formaction="/download_audio" type="submit">Descargar Audio</button>
-                            <button class="btn btn-warning" formaction="/transcribe_audio" type="submit">Transcribir</button>
+                            <button class="btn btn-warning" formaction="/transcribe_audio" type="submit">Transcribir y Analisar</button>
                         </div>
                     </form>
                 </div>
