--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,6 @@
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet" />
-    <!-- Incluir SpinKit -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/spinkit/2.0.1/spinkit.min.css" />
     <style>
         .spinner-container {
             display: none;
@@ -105,19 +101,8 @@
 
     <!-- Spinner de carga con leyenda -->
     <div id="spinner" class="spinner-container">
-        <div class="sk-circle">
-            <div class="sk-circle1 sk-child"></div>
-            <div class="sk-circle2 sk-child"></div>
-            <div class="sk-circle3 sk-child"></div>
-            <div class="sk-circle4 sk-child"></div>
-            <div class="sk-circle5 sk-child"></div>
-            <div class="sk-circle6 sk-child"></div>
-            <div class="sk-circle7 sk-child"></div>
-            <div class="sk-circle8 sk-child"></div>
-            <div class="sk-circle9 sk-child"></div>
-            <div class="sk-circle10 sk-child"></div>
-            <div class="sk-circle11 sk-child"></div>
-            <div class="sk-circle12 sk-child"></div>
+        <div class="spinner-border text-light" role="status">
+            <span class="visually-hidden">Loading...</span>
         </div>
       <p
         >Trabajando... Ten paciencia, soy nuevo en esto, es mi primer día. Esto
@@ -128,6 +113,7 @@
     <!-- Incluir JavaScript de Bootstrap y el controlador del formulario -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
+
       const eventSource = new EventSource("/stream");
 
         eventSource.addEventListener("spinner", function(event) {
